# rtc-quickdemo-android

./: .gitignore  README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
callapp/: README.md  build.gradle
callapp/src/main/: AndroidManifest.xml
callkit/: build.gradle  proguard-rules.pro
callkit/src/main/: AndroidManifest.xml
calllib/: build.gradle
calllib/src/main/: AndroidManifest.xml
callplus/: build.gradle
callplus/src/main/: AndroidManifest.xml
cdnlivestream/: build.gradle
cdnlivestream/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
live/: build.gradle
live/src/main/: AndroidManifest.xml
meeting1v1/: build.gradle
meeting1v1/src/main/: AndroidManifest.xml
meeting1v1/src/main/cpp/: CMakeLists.txt  custom_audio_frame_decryptor.cpp  custom_audio_frame_encryptor.cpp  custom_video_frame_decryptor.cpp  custom_video_frame_encryptor.cpp  frame_crypto_jni.cpp
meeting1v1/src/main/cpp/include/: custom_audio_frame_decryptor.h  custom_audio_frame_encryptor.h  custom_frame_decryptor_interface.h  custom_frame_encryptor_interface.h  custom_video_frame_decryptor.h  custom_video_frame_encryptor.h  frame_crypto_jni.h
quickdemo-callkit/: build.gradle
quickdemo-callkit/src/main/: AndroidManifest.xml
quickdemo-calllib/: build.gradle
quickdemo-live/: build.gradle
quickdemo-meeting-1v1/: build.gradle
quickdemo-pk/: build.gradle
rtcapp/: README.md  build.gradle
rtcapp/release/: output.json
screenshare/: build.gradle
(+206 files in other folders)
